# ferrisdb

./: .gitignore  Cargo.toml  README.md  ferrisdb.example.toml  test.json
examples/: bench.rs  bench_sql.rs  client.rs  sql_demo.rs
ferrisdb-data/: 000001.sst  000002.sst  MANIFEST
src/: bench.rs  config.rs  error.rs  lib.rs  main.rs
src/cli/: mod.rs  repl.rs
src/server/: connection_pool.rs  http.rs  mod.rs  static_assets.rs  tcp.rs
src/sql/: ast.rs  catalog.rs  executor.rs  index.rs  lexer.rs  mod.rs  optimizer.rs  parser.rs  plan_cache.rs  row.rs  statistics.rs
src/storage/: bloom.rs  compaction.rs  lsm.rs  manifest.rs  memory.rs  mod.rs  traits.rs  wal.rs
src/storage/sstable/: format.rs  mod.rs  reader.rs  (+1 more)
src/transaction/: keyutil.rs  mod.rs  mvcc.rs
static/: index.html
tests/: alter_drop_test.rs  background_compaction_test.rs  basic_test.rs  bloom_test.rs  case_when_test.rs  check_constraint_test.rs  compaction_test.rs  config_test.rs  connection_pool_test.rs  cursor_test.rs  failure_injection_test.rs  foreign_key_test.rs  http_test.rs  index_test.rs  insert_select_test.rs  isolation_level_test.rs  json_test.rs  lsm_test.rs  manifest_test.rs  matview_test.rs  multi_statement_test.rs  mvcc_test.rs  optimizer_test.rs  partition_test.rs  prepared_stmt_test.rs  privilege_test.rs  procedure_test.rs  proptest_kv.rs  proptest_sql.proptest-regressions  proptest_sql.rs  recursive_cte_test.rs  server_test.rs  sql_advanced_test.rs  sql_executor_test.rs  sql_parser_test.rs  sstable_test.rs  subquery_test.rs  temp_table_test.rs  trigger_test.rs  udf_test.rs  (+7 more)
